<resources>
    <string name="app_name">OnList</string>
    <string name="titleMainActivity">Olá OnList</string>
    <string name="textTitleLoginActivity">Realize seu login na OnList</string>
    <string name="textSubTitleLoginActivity">Seja bem vindo ao OnList, descomplique sua vida e torne suas listas de compras mais divertidas.</string>
    <string name="textTitleInputLoginEmailForm">E-mail:</string>
    <string name="textTitleInputLoginPasswordForm">Senha:</string>
    <string name="textTileLoginActivityInfoUserNotRegistered">Caso ainda não possui cadastro na OnList:</string>
    <string name="textTitleLoginActivityRedirectionUserRegisterScreen">Cadastre-se aqui</string>
    <string name="textTileButtonLogin">Acessar</string>
    <string name="placeholderInputEmailLoginForm">Digite seu email de login</string>
    <string name="placeholderInputPasswordLoginForm">Digite sua senha de login</string>
    <string name="textTitleRegisterUserActivity">Registre-se na OnList</string>
    <string name="textTitleRegisterProductActivity">Cadastre seu produto</string>
    <string name="textTitleUpdateProductActivity">Edite seu produto</string>
    <string name="textTitleUpdateUserActivity">Editar perfil</string>
    <string name="textTitleRegisterListActivity">Cadastre sua lista</string>
    <string name="textSubTitleRegisterUserActivity">Se cadastre em nossa plataforma e nos dê uma chance de otimizar suas listas de compras.</string>
    <string name="textSubTitleUpdateUserActivity">Insira novos dados para serem atualizados em seu perfil.</string>
    <string name="textSubTitleRegisterProductActivity">Insira os dados do produto que deseja cadastradrar.</string>
    <string name="textSubTitleUpdateProductActivity">Insira os dados do produto que deseja editar.</string>
    <string name="textSubTitleRegisterListActivity">Insira os dados da lista que deseja cadastrar, e mude a forma como você vai fazer suas compras.</string>
    <string name="textTitleInputRegisterNameForm">Nome:</string>
    <string name="textTitleInputRegisterEmailForm">E-mail:</string>
    <string name="textTitleInputRegisterPasswordForm">Senha:</string>
    <string name="textTitleInputRegisterPasswordConfirmForm">Confirmar senha:</string>
    <string name="textTitleInputRegisterTelephoneForm">Telefone:</string>
    <string name="textTitleInputRegisterInitialForm">Iniciais:</string>
    <string name="placeholderInputNameRegisterUserForm">Digite seu nome para registro</string>
    <string name="placeholderInputEmailRegisterUserForm">Digite seu email para registro</string>
    <string name="placeholderInputPasswordRegisterUserForm">Digite sua senha para registro</string>
    <string name="placeholderInputPasswordRegisterConfirmUserForm">Digite sua senha novamente</string>
    <string name="placeholderInputPhoneRegisterUserForm">Digite seu telefone</string>
    <string name="placeholderInputInitalsRegisterUserForm">Inicais</string>
    <string name="textTileButtonRegisterUser">Registre-se</string>
    <string name="textTileButtonUpdateUser">Salvar edição</string>
    <string name="textTileRegisterUserActivityInfoUserRegistered">Caso já esteja cadastrado aqui na OnList:</string>
    <string name="textTitleRegisterUserActivityRedirectionUserLoginScreen">Ir ao login</string>
    <string name="textTitleInputRegisterProductNameForm">Nome:</string>
    <string name="textTitleInputRegisterProductPriceForm">Preço:</string>
    <string name="textTitleInputRegisterListNameForm">Nome da lista:</string>
    <string name="textTitleInputRegisterListMarketForm">Selecione o mercado desta lista:</string>
    <string name="textTitleInputRegisterListViewerForm">Seleciona um visualizador desta lista:</string>
    <string name="placeholderInputNameRegisterProductForm">Digite o nome do produto</string>
    <string name="placeholderInputPriceRegisterProductForm">Digite o preço do produto</string>
    <string name="placeholderInputNameRegisterListForm">Digite o nome da lista</string>
    <string name="placeholderInputMarketRegisterListForm">Digite o nome do mercado da lista</string>
    <string name="placeholderInputViewerRegisterListForm">Digite o nome do visualizador da lista</string>
    <string name="textTileButtonCreateProduct">Cadastrar produto</string>
    <string name="textTileButtonUpdateProduct">Salvar produto</string>
    <string name="textTileButtonRegisterList">Cadastrar lista</string>
    <string name="textTileMarketplaceItemList">Mercado do Fulano</string>
    <string name="btn_register_new_market_list">Cadastrar novo mercado</string>
    <string name="btn_list_item_marketplace">Adicionar produto a lista</string>
    <string name="nameUserMenuPerfil">João da Silva Magalhães</string>
    <string name="emailUserMenuPerfil">joao.magalhaes@gmail.com</string>
    <string name="titleProductItemList">Maça</string>
    <string name="titleListItemList">Lista de número um</string>
    <string name="priceProductItemList">Preço: R$ 6.00</string>
    <string name="marketListItemList">Mercado seu Zé</string>
    <string name="btn_register_new_product_list">Cadastrar novo produto</string>
    <string name="btn_register_new_list_list">Cadastrar nova lista</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="textTitleRegisterMarketActivity">Cadastrar mercado</string>
    <string name="textSubTitleRegisterMarketActivity">Insira os dados do mercado que deseja cadastrar em sua lista para posteriormente vir a adicionar os produtos deste.</string>
    <string name="textTitleInputRegisterNameMarketForm">Nome do mercado</string>
    <string name="textTitleInputSteetForm">Nome da rua</string>
    <string name="placeholderInputNameRegisterMarketForm">Digite o nome do mercado</string>
    <string name="placeholderInputDistrictRegisterMarketForm">Nome do bairro</string>
    <string name="placeholderInputStreetRegisterMarketForm">Nome da rua</string>
    <string name="textTitleInputRegisterDistrictForm">Nome do bairro</string>
    <string name="textTitleInputRegisterCityForm">Nome da cidade</string>
    <string name="placeholderInputRegisterCityForm">Nome da cidade</string>
    <string name="textTitleInputRegisterCEPMarketForm">CEP</string>
    <string name="textTitleInputRegisterNumberMarketForm">Número</string>
    <string name="placeholderInputCEPRegisterMarketForm">Digite o CEP</string>
    <string name="placeholderInputNumberRegisterMarketForm">703</string>
    <string name="textTileButtonRegisterMarket">Cadastrar novo mercado</string>
    <string name="textTitleInputLongitudeForm">Longitude</string>
    <string name="placeholderInputLongitudeRegisterMarketForm">Digite a longitude</string>
    <string name="textTitleInputLatitudeForm">Latitude</string>
    <string name="placeholderInputLatitudeRegisterMarketForm">Digite a latitude</string>
    <string name="textTitleUpdateMarketActivity">Editar mercado</string>
    <string name="textSubTitleUpdateMarketActivity">Altere conforme o necessário os dados deste mercado já cadastrado em sua lista.</string>
    <string name="textTileButtonUpdateMarket">Atualizar mercado</string>
    <string name="textTitleProductItemInList">Maçã</string>
    <string name="btn_add_new_product_list">Adicionar produto a lista</string>
    <string name="atual_price">Preço atual</string>
    <string name="price_in_number">R$ 273,27</string>
    <string name="qtd_products">Quantidade de produtos</string>
    <string name="number_of_products">53 produtos</string>
</resources>