<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textTitleUpdateProductActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/textTitleUpdateProductActivity"
                android:textAlignment="textStart"
                android:layout_marginStart="20dp"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textSubTitleUpdateProductActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/textSubTitleUpdateProductActivity"
                android:textAlignment="viewStart"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/nameLabelFormUpdateProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/textTitleInputRegisterProductNameForm"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/inputNameFormUpdateProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/roboto_regular"
                android:background="@drawable/custom_input_form"
                android:drawableEnd="@drawable/custom_cart_icon"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/placeholderInputNameRegisterProductForm"
                android:inputType="textPersonName"
                android:textColor="@color/input_text_color"
                android:padding="15dp" />

            <TextView
                android:id="@+id/priceLabelFormUpdateProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/textTitleInputRegisterProductPriceForm"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/inputPriceFormUpdateProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/roboto_regular"
                android:background="@drawable/custom_input_form"
                android:drawableEnd="@drawable/custom_money_icon"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/placeholderInputPriceRegisterProductForm"
                android:inputType="textPassword"
                android:textColor="@color/input_text_color"
                android:padding="15dp" />

            <Button
                android:id="@+id/updateProductAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/custom_button"
                android:text="@string/textTileButtonUpdateProduct"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>