<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registers.RegisterMarketplaceActivity"
    android:id="@+id/drawerLayoutRegisterMarket">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <ScrollView
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical" >

               <TextView
                   android:id="@+id/textTitleRegisterMarketActivity"
                   android:layout_width="342dp"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="45dp"
                   android:fontFamily="@font/roboto_black"
                   android:text="@string/textTitleRegisterMarketActivity"
                   android:textAlignment="textStart"
                   android:layout_marginStart="20dp"
                   android:textColor="@color/black"
                   android:textSize="30sp" />

               <TextView
                   android:id="@+id/textSubTitleRegisterMarketActivity"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/textSubTitleRegisterMarketActivity"
                   android:layout_marginTop="5dp"
                   android:layout_marginLeft="20dp"
                   android:layout_marginRight="20dp"
                   android:layout_marginBottom="10dp"
                   android:fontFamily="@font/roboto_regular"
                   android:textAlignment="viewStart"
                   android:textColor="@color/gray"
                   android:textSize="16sp" />

               <TextView
                   android:id="@+id/nameLabelFormRegisterMarket"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="20dp"
                   android:layout_marginRight="20dp"
                   android:fontFamily="@font/roboto_medium"
                   android:text="@string/textTitleInputRegisterNameMarketForm"
                   android:textColor="@color/black" />

               <EditText
                   android:id="@+id/inputNameMarketFormRegisterMarket"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="20dp"
                   android:layout_marginRight="20dp"
                   android:layout_marginTop="5dp"
                   android:layout_marginBottom="5dp"
                   android:fontFamily="@font/roboto_regular"
                   android:background="@drawable/custom_input_form"
                   android:drawableEnd="@drawable/custom_market_icon"
                   android:drawablePadding="5dp"
                   android:ems="10"
                   android:hint="@string/placeholderInputNameRegisterMarketForm"
                   android:inputType="textPersonName"
                   android:textColor="@color/input_text_color"
                   android:padding="15dp" />

               <TextView
                   android:id="@+id/streetLabelFormRegisterMarket"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="20dp"
                   android:layout_marginRight="20dp"
                   android:fontFamily="@font/roboto_medium"
                   android:text="@string/textTitleInputSteetForm"
                   android:textColor="@color/black" />

               <EditText
                   android:id="@+id/inputNameStreetRegisterMarket"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="20dp"
                   android:layout_marginRight="20dp"
                   android:layout_marginTop="5dp"
                   android:layout_marginBottom="5dp"
                   android:fontFamily="@font/roboto_regular"
                   android:background="@drawable/custom_input_form"
                   android:drawableEnd="@drawable/custom_street_icon"
                   android:drawablePadding="5dp"
                   android:ems="10"
                   android:hint="@string/placeholderInputStreetRegisterMarketForm"
                   android:inputType="textPersonName"
                   android:textColor="@color/input_text_color"
                   android:padding="15dp" />


               <TextView
                   android:id="@+id/latitudeLabelFormRegisterMarket"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="20dp"
                   android:layout_marginRight="20dp"
                   android:fontFamily="@font/roboto_medium"
                   android:text="@string/textTitleInputLatitudeForm"
                   android:textColor="@color/black" />

               <EditText
                   android:id="@+id/inputNameLatitudeRegisterMarket"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="20dp"
                   android:layout_marginRight="20dp"
                   android:layout_marginTop="5dp"
                   android:layout_marginBottom="5dp"
                   android:fontFamily="@font/roboto_regular"
                   android:background="@drawable/custom_input_form"
                   android:drawableEnd="@drawable/custom_icon_navigation"
                   android:drawablePadding="5dp"
                   android:ems="10"
                   android:hint="@string/placeholderInputLatitudeRegisterMarketForm"
                   android:inputType="phone"
                   android:textColor="@color/input_text_color"
                   android:padding="15dp" />

               <TextView
                   android:id="@+id/longitudeLabelFormRegisterMarket"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="20dp"
                   android:layout_marginRight="20dp"
                   android:fontFamily="@font/roboto_medium"
                   android:text="@string/textTitleInputLongitudeForm"
                   android:textColor="@color/black" />

               <EditText
                   android:id="@+id/inputLongitudeRegisterMarket"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="20dp"
                   android:layout_marginRight="20dp"
                   android:layout_marginTop="5dp"
                   android:layout_marginBottom="5dp"
                   android:fontFamily="@font/roboto_regular"
                   android:background="@drawable/custom_input_form"
                   android:drawableEnd="@drawable/custom_icon_navigation"
                   android:drawablePadding="5dp"
                   android:ems="10"
                   android:hint="@string/placeholderInputLongitudeRegisterMarketForm"
                   android:inputType="phone"
                   android:textColor="@color/input_text_color"
                   android:padding="15dp" />

               <TextView
                   android:id="@+id/districtLabelRegisterMarket"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="20dp"
                   android:layout_marginRight="20dp"
                   android:fontFamily="@font/roboto_medium"
                   android:text="@string/textTitleInputRegisterDistrictForm"
                   android:textColor="@color/black" />

               <EditText
                   android:id="@+id/inputNameDistrictRegisterMarket"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="20dp"
                   android:layout_marginRight="20dp"
                   android:layout_marginTop="5dp"
                   android:layout_marginBottom="5dp"
                   android:fontFamily="@font/roboto_regular"
                   android:background="@drawable/custom_input_form"
                   android:drawableEnd="@drawable/custom_city_icon"
                   android:drawablePadding="5dp"
                   android:ems="10"
                   android:hint="@string/placeholderInputDistrictRegisterMarketForm"
                   android:inputType="textPersonName"
                   android:textColor="@color/input_text_color"
                   android:padding="15dp" />

               <TextView
                   android:id="@+id/cityLabelRegisterMarket"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="20dp"
                   android:layout_marginRight="20dp"
                   android:fontFamily="@font/roboto_medium"
                   android:text="@string/textTitleInputRegisterCityForm"
                   android:textColor="@color/black" />

               <EditText
                   android:id="@+id/inputNameCityRegisterMarket"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="20dp"
                   android:layout_marginRight="20dp"
                   android:layout_marginTop="5dp"
                   android:layout_marginBottom="5dp"
                   android:fontFamily="@font/roboto_regular"
                   android:background="@drawable/custom_input_form"
                   android:drawableEnd="@drawable/custom_city_icon"
                   android:drawablePadding="5dp"
                   android:ems="10"
                   android:hint="@string/placeholderInputRegisterCityForm"
                   android:inputType="textPersonName"
                   android:textColor="@color/input_text_color"
                   android:padding="15dp" />

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="horizontal">

                   <TextView
                       android:id="@+id/cepLabelFormRegisterMarket"
                       android:layout_width="208dp"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="20dp"
                       android:layout_marginRight="20dp"
                       android:fontFamily="@font/roboto_medium"
                       android:text="@string/textTitleInputRegisterCEPMarketForm"
                       android:textColor="@color/black" />

                   <TextView
                       android:id="@+id/numberLabelFormRegisterMarket"
                       android:layout_width="115dp"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="20dp"
                       android:layout_marginRight="20dp"
                       android:fontFamily="@font/roboto_medium"
                       android:text="@string/textTitleInputRegisterNumberMarketForm"
                       android:textColor="@color/black" />
               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="horizontal">

                   <EditText
                       android:id="@+id/inputcepFormRegisterMarket"
                       android:layout_width="228dp"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="20dp"
                       android:layout_marginTop="5dp"
                       android:layout_marginRight="20dp"
                       android:layout_marginBottom="5dp"
                       android:background="@drawable/custom_input_form"
                       android:drawableEnd="@drawable/custom_icon_navigation"
                       android:drawablePadding="5dp"
                       android:ems="10"
                       android:fontFamily="@font/roboto_regular"
                       android:hint="@string/placeholderInputCEPRegisterMarketForm"
                       android:inputType="phone"
                       android:padding="15dp"
                       android:maxLength="8"
                       android:textColor="@color/input_text_color" />

                   <EditText
                       android:id="@+id/inputNumberFormRegisterMarket"
                       android:layout_width="120dp"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="5dp"
                       android:layout_marginRight="20dp"
                       android:layout_marginBottom="5dp"
                       android:background="@drawable/custom_input_form"
                       android:drawableEnd="@drawable/custom_icon_navigation"
                       android:drawablePadding="5dp"
                       android:ems="10"
                       android:fontFamily="@font/roboto_regular"
                       android:hint="@string/placeholderInputNumberRegisterMarketForm"
                       android:inputType="phone"
                       android:padding="15dp"
                       android:maxLength="4"
                       android:textColor="@color/input_text_color" />
               </LinearLayout>

               <Button
                   android:id="@+id/registerMarketAction"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="20dp"
                   android:layout_marginTop="25dp"
                   android:layout_marginRight="20dp"
                   android:background="@drawable/custom_button"
                   android:text="@string/textTileButtonRegisterMarket"
                   android:textColor="#FFFFFF"
                   android:onClick="registerMarket"/>

           </LinearLayout>
       </ScrollView>
   </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start"
        android:background="@color/green_onlist"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        />

</androidx.drawerlayout.widget.DrawerLayout>