<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registers.RegisterListActivity"
    android:id="@+id/drawerLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textTitleRegisterListActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/roboto_black"
                    android:text="@string/textTitleRegisterListActivity"
                    android:textAlignment="textStart"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/textSubTitleRegisterListActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/textSubTitleRegisterListActivity"
                    android:textAlignment="viewStart"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/nameLabelFormRegisterList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="35dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/textTitleInputRegisterListNameForm"
                    android:inputType="textPersonName"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/inputNameFormRegisterList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/roboto_regular"
                    android:background="@drawable/custom_input_form"
                    android:drawableEnd="@drawable/custom_edit_icon"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="@string/placeholderInputNameRegisterListForm"
                    android:inputType="textPersonName"
                    android:textColor="@color/input_text_color"
                    android:padding="15dp" />

                <TextView
                    android:id="@+id/marketLabelFormRegisterList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/textTitleInputRegisterListMarketForm"
                    android:textColor="@color/black" />

                <AutoCompleteTextView
                    android:id="@+id/inputMarketFormRegisterList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/roboto_regular"
                    android:background="@drawable/custom_input_form"
                    android:drawableEnd="@drawable/custom_market_icon"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/placeholderInputMarketRegisterListForm"
                    android:inputType="textPersonName"
                    android:textColor="@color/input_text_color"
                    android:padding="15dp" />

                <TextView
                    android:id="@+id/viewerLabelFormRegisterList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/textTitleInputRegisterListViewerForm"
                    android:textColor="@color/black" />

                <AutoCompleteTextView
                    android:id="@+id/inputViewerFormRegisterList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/roboto_regular"
                    android:background="@drawable/custom_input_form"
                    android:drawableEnd="@drawable/custom_viewer_icon"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="@string/placeholderInputViewerRegisterListForm"
                    android:inputType="textPersonName"
                    android:textColor="@color/input_text_color"
                    android:padding="15dp" />

                <Button
                    android:id="@+id/registerListAction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/custom_button"
                    android:text="@string/textTileButtonRegisterList"
                    android:textColor="#FFFFFF"
                    android:onClick="registerList" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start"
        android:background="@color/green_onlist"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        />
</androidx.drawerlayout.widget.DrawerLayout>